Wrapping issues list items

--- a/angular-ui/src/app/components/validation-results/validation-results.component.css
+++ b/angular-ui/src/app/components/validation-results/validation-results.component.css
@@ -37,3 +37,9 @@ mat-expansion-panel-header {
 div.validation-container {
   transition: height 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
+
+::ng-deep .mat-mdc-list-item-unscoped-content {
+  white-space: normal;
+  word-wrap: break-word;
+}
+
